Made the input fields change color when invalid input is entered.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <center>
-        <form action="https://google.com" class="form" onsubmit="return validate()">
-            <input class="email" type="text" placeholder="Email">
+    <!-- <center> -->
+        <form action="https://google.com" class="form" onsubmit="return validate(event)">
+            <input class="email" type="text" placeholder="Email" style="background-color: white;">
             <br>
             <input class="password" type="password" placeholder="Password">
             <br>
             <input class="btn" type="submit" value="LOGIN">
         </form>
-    </center>
-    <script src="script.js"></script>
+    <!-- </center> -->
+    <script src="script.js"></script>   
 </body>
 
 </html>
