Modified some CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- <center> -->
-        <form action="https://google.com" class="form" onsubmit="return validate(event)">
+        <form action="https://github.com/DMegatron" class="form" onsubmit="return validate(event)">
             <input class="email" type="text" placeholder="Email" style="background-color: white;">
             <br>
             <input class="password" type="password" placeholder="Password">
